--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -78,7 +78,7 @@ Overview
 
 <div class="custom-font mb-4" id="accordion-collapse3" data-accordion="collapse">
         <button type="button" class="text-[#2c9ac0] text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-3" aria-expanded="false" aria-controls="accordion-collapse-body-3">
-      Current State
+      State of Development
       <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
     </button>
 
@@ -115,17 +115,17 @@ Overview
 </div>
 <div class="custom-font mb-4" id="accordion-collapse4" data-accordion="collapse">
         <button type="button" class="text-[#2c9ac0] text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-4" aria-expanded="false" aria-controls="accordion-collapse-body-4">
-      History
+      Background
       <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
     </button>
     <div id="accordion-collapse-body-4" class="hidden no-background" aria-labelledby="accordion-collapse-heading-4">
 
            <p class="custom-font mb-2">I Titus have been developing world building tools in various capacities since 2011</p>
 
-        <p class="custom-font mb-2">Much of this in Unity, that I used for <a href="https://github.com/worldsmithdev/Worldsmith" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">WorldSmith</a> in 2018:</p>
+        <p class="custom-font mb-2">Much of this in Unity, with a highlight in <a href="https://github.com/worldsmithdev/Worldsmith" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">WorldSmith</a> in 2018:</p>
                <p class="custom-font mb-2">An open source world engine with a <a href="https://imgur.com/XsVQU7W" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">world</a> (Sicily ~500BC), <a href="https://imgur.com/XsVQU7W" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer"> economy</a>, and game built on top of it</p>
             <p class="custom-font mb-2">My interests include ((tools for (simulation of)) worlds for) games and history: political, economy, military </p>
-            <p class="custom-font mb-2">Wrote my <a href="https://theses.liacs.nl/pdf/2021-2022-OostingTitus.pdf" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">master's thesis</a> on the translation of politics into a flexible <a href="https://github.com/tmoosting/Schemer" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">world building structure</a></p>
+            <p class="custom-font mb-2">Wrote my <a href="https://theses.liacs.nl/pdf/2021-2022-OostingTitus.pdf" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">master's thesis</a> on the <a href="https://github.com/tmoosting/Schemer" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">translation of political dynamics</a> into world building structures</p>
 
 
     </div>
