--- a/home/templates/content_FAQs.html
+++ b/home/templates/content_FAQs.html
@@ -24,7 +24,7 @@
      <p class="custom-font mb-1">What's with all the categories and fields and types and subtypes that I totally don't agree with? </p>
             <ul class="custom-font accordion-content accordion-list-item">
             <li>These are all a rough sketch that provide some baseline simulation and game integration potential </li>
-            <li>While some categories, fields and types are recognized by the author as useful, all parts of it are open to feedback</li>
+            <li>Most categories, fields and types are recognized by the author as useful, but all parts of it are open to feedback</li>
         </ul>
 
 </div>
