--- a/home/templates/content_apps.html
+++ b/home/templates/content_apps.html
@@ -28,15 +28,15 @@
 
 
 <div class="custom-font mb-2" id="accordion-collapsee11" data-accordion="collapsee">
-        <button type="button" class="text-[#2c9ac0] text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapsee-body-11" aria-expanded="false" aria-controls="accordion-collapsee-body-11">
+        <button type="button" class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapsee-body-11" aria-expanded="false" aria-controls="accordion-collapsee-body-11">
       (Mobile) Companion
       <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
     </button>
     <div id="accordion-collapsee-body-11" class="hidden no-background" aria-labelledby="accordion-collapsee-heading-11">
-          <p class="custom-font mb-5 text-sm" >Flutter project developed in 2023 and 2024 as a gamified mobile world creation interface</p>
+          <p class="custom-font mb-5" >Flutter project developed in 2023 and 2024 as a gamified mobile world creation interface</p>
                  <p class="custom-font mb-2">Lets you define a world, create and configure elements in it, follow a progression system with some guides and rewards, and chat with AI agents that are specialized for world build assistance</p>
     <p class="custom-font mb-2">Currently in internal testing environments for both iOs and android</p>
-    <p class="custom-font mb-8">All feedback is welcome: on stability, bugs, ui, content, database, ..</p>
+    <p class="custom-font mb-8">All feedback is welcome: on stability, bugs, UI/UX, content, database, etc.</p>
     <a href="{% static 'img/companion.jpg' %}" target="_blank" class="inline-block mb-3">
           <img src="{% static 'img/companion.jpg' %}" alt="Companion Preview" class="max-w-xs cursor-pointer">
       </a>
@@ -46,60 +46,62 @@
 
 
 <div class="custom-font mb-2" id="accordion-collapsee12" data-accordion="collapsee">
-        <button type="button" class="text-[#2c9ac0] text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapsee-body-12" aria-expanded="false" aria-controls="accordion-collapsee-body-12">
+        <button type="button" class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapsee-body-12" aria-expanded="false" aria-controls="accordion-collapsee-body-12">
       (Unity Editor) Mapper
       <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
     </button>
 
     <div id="accordion-collapsee-body-12" class="hidden no-background" aria-labelledby="accordion-collapsee-heading-12">
-          <p class="custom-font mb-1 text-sm">Unity project developed in early 2023 as an overall world 'engine'</p>
-          <p class="custom-font mb-5 text-sm">Repo and setup guide to be provided shortly (early May 2024) </p>
+          <p class="custom-font mb-5">Unity project developed in 2023 as an overall world engine, access and guide in early May 2024 </p>
 
 
-            <p class="custom-font mb-3">Wrapper that replaces the entire Unity default editor, prior Unity experience is irrelevant</p>
+
+            <p class="custom-font mb-3">Acts as a wrapper that replaces the entire Unity default editor, prior Unity experience not required</p>
 
       <a href="{% static 'img/mapper.png' %}" target="_blank" class="inline-block mb-3">
           <img src="{% static 'img/mapper.png' %}" alt="Mapper Preview" class="max-w-xs cursor-pointer">
       </a>
            <p class="custom-font">Four sections present a range of world controls:</p>
              <ul class="custom-font accordion-content accordion-list-item">
-            <li>Finder (browsing the world)</li>
-            <li>Editor (viewing, editing elements)</li>
-            <li>Timeliner (graph node system)</li>
-            <li>Mapper (map management, element placement)</li>
+            <li>Mapper - For map management, element placement</li>
+            <li>Finder - For browsing world s</li>
+            <li>Editor - For viewing, editing elements</li>
+            <li>Timeliner - Using a graph node system</li>
         </ul>
-        <br>
-               <p class="custom-font">Status per April 2024:</p>
-            <ul class="custom-font accordion-content accordion-list-item">
-            <li>Finder is functional</li>
-            <li>Editor is limited to core fields</li>
-            <li>Timeliner has just started development</li>
-            <li>Mapper is functional</li>
-        </ul>
-
-        <br>
-          <p class="custom-font">Now called Mapper for its most useful section: </p>
+            <br>
+                <p class="custom-font">Includes map functionality: </p>
                <ul class="custom-font accordion-content accordion-list-item">
             <li>Maps can be added, saved and configured</li>
             <li>Pins can be placed, moved, managed, and linked to elements</li>
             <li>Map data is integrated to the world and exportable</li>
         </ul>
+        <br>
+               <p class="custom-font">Status per April 2024:</p>
+            <ul class="custom-font accordion-content accordion-list-item">
+            <li>Mapper - Functional</li>
+            <li>Finder - Functional</li>
+            <li>Editor - Limited to core fields</li>
+            <li>Timeliner - Just started development</li>
+        </ul>
+
+        <br>
+
 
 
 
     </div>
 </div>
 <div class="custom-font mb-2" id="accordion-collapsee13" data-accordion="collapsee">
-        <button type="button" class="text-[#2c9ac0] text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapsee-body-13" aria-expanded="false" aria-controls="accordion-collapsee-body-13">
+        <button type="button" class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapsee-body-13" aria-expanded="false" aria-controls="accordion-collapsee-body-13">
       (Unity WebGL) Explorer
       <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
     </button>
     <div id="accordion-collapsee-body-13" class="hidden no-background" aria-labelledby="accordion-collapsee-heading-13">
 
-                  <p class="custom-font mb-1 text-sm">Unity runtime project for world (over)viewing that started development in 2024</p>
-                  <p class="custom-font mb-5 text-sm">Release in early summer</p>
+                  <p class="custom-font mb-5">Unity runtime project for world (over)viewing that started development in 2024, release in early summer</p>
 
-                  <p class="custom-font mb-1">Needs several more weeks of production for:</p>
+
+                  <p class="custom-font mb-1">Includes:</p>
             <ul class="accordion-content accordion-list-item">
             <li>A web-based interface that can load directly from world keys</li>
             <li>Dynamically creates diagrams for element relations, ownership and assignment  </li>
@@ -109,13 +111,12 @@
     </div>
 </div>
 <div class="custom-font mb-2" id="accordion-collapsee14" data-accordion="collapsee">
-        <button type="button" class="text-[#2c9ac0] text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapsee-body-14" aria-expanded="false" aria-controls="accordion-collapsee-body-14">
-      More Tools
+        <button type="button" class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapsee-body-14" aria-expanded="false" aria-controls="accordion-collapsee-body-14">
+      Applications Roadmap
       <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
     </button>
     <div id="accordion-collapsee-body-14" class="hidden no-background" aria-labelledby="accordion-collapsee-heading-14">
 
-                        <p class="custom-font mb-1">Priority:</p>
             <ul class="accordion-content accordion-list-item">
             <li>Desktop / web-based element editing interfaces (including on onlyworlds.com) </li>
             <li>Mapping tools and a robust mapping data system (see Mapper for an early start) </li>
@@ -130,7 +131,7 @@
 
 {##}
 {#<div class="custom-font mb-4" id="accordion-collapsee5" data-accordion="collapsee">#}
-{#        <button type="button" class="text-[#2c9ac0] text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapsee-body-5" aria-expanded="false" aria-controls="accordion-collapsee-body-5">#}
+{#        <button type="button" class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapsee-body-5" aria-expanded="false" aria-controls="accordion-collapsee-body-5">#}
 {#      Changelog#}
 {#      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>#}
 {#    </button>#}
