--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -27,31 +27,30 @@
 
 <div class="custom-font mb-2" id="accordion-collapse1" data-accordion="collapse">
     <h2 id="accordion-collapse-heading-1" class="mb-2">
-            <button type="button" class="text-[#2c9ac0] text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-1" aria-expanded="false" aria-controls="accordion-collapse-body-1">
+            <button type="button" class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-1" aria-expanded="false" aria-controls="accordion-collapse-body-1">
 Overview
       <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
     </button>
     </h2>
 
     <div id="accordion-collapse-body-1" class="hidden no-background" aria-labelledby="accordion-collapse-heading-1">
-        <div class="accordion-content">
-    <p class="custom-font mb-2">There are many tools that help <b>write, organize and display worlds</b></p>
-    <p class="custom-font mb-2">But there are limited ways to <b>transfer world data</b> across these domains</p>
+        <div class="accordion-content px-1">
+    <p class="custom-font mb-2">There are many tools that help write, organize and display worlds</p>
+    <p class="custom-font mb-6">But there are limited ways to transfer world data across applications</p>
 
-    <p class="custom-font mb-2">OnlyWorlds aims to provide a <b>common standard</b> in world building</p>
+    <p class="custom-font mb-2">OnlyWorlds provides a common standard in world building through</p>
                <ul class="custom-font accordion-content accordion-list-item">
-            <li>By proposing a 'blueprint' for creating worlds and their content</li>
-            <li>That supports the broadest range of worlds</li>
-            <li>And is transferable across tools, games, devices and web</li>
+            <li>Proposing a 'blueprint' for worlds and their content</li>
+            <li>Supporting maximum diversity in worlds</li>
+            <li>Allowing transfer across tools, games, devices and websites</li>
         </ul>
             <br>
     <p class="custom-font mb-2">The framework includes</p>
                 <ul class="custom-font accordion-content accordion-list-item">
-            <li>A substantial database schema</li>
+            <li>A universal database schema</li>
             <li>Infrastructure for open source development and deployment</li>
-            <li>A website for hosting and managing world files</li>
-            <li>A core set of tools</li>
-            <li>A promise of games</li>
+            <li>A website for hosting and managing worlds</li>
+            <li>A set of core world creation tools </li>
         </ul>
             <br>
 
@@ -60,35 +59,55 @@ Overview
 </div>
 
 <div class="custom-font mb-4" id="accordion-collapse2" data-accordion="collapse">
-        <button type="button" class="text-[#2c9ac0] text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-2" aria-expanded="false" aria-controls="accordion-collapse-body-2">
+        <button type="button" class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-2" aria-expanded="false" aria-controls="accordion-collapse-body-2">
       Philosophy
       <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
     </button>
 
     <div id="accordion-collapse-body-2" class="hidden no-background" aria-labelledby="accordion-collapse-heading-2">
-           <p class="custom-font mb-2">OnlyWorlds aims to always provide</p>
    <ul class="custom-font accordion-content accordion-list-item">
-       <li>An open source, community-driven and future proof <b>data system</b></li>
-            <li><b>Freedom</b> to build applications for and worlds with it</li>
-            <li><b>Ownership</b> and control of worlds to the users</li>
+       <li>An open source, community-driven and future proof data system</li>
+            <li>Freedom to build applications and tools that expand the framework</li>
+            <li>Ownership and control of worlds remains yours</li>
         </ul>
     </div>
 </div>
 
 
+<div class="custom-font mb-4" id="accordion-collapse4" data-accordion="collapse">
+        <button type="button" class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-4" aria-expanded="false" aria-controls="accordion-collapse-body-4">
+      Background
+      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+    </button>
+    <div id="accordion-collapse-body-4" class="hidden no-background" aria-labelledby="accordion-collapse-heading-4">
+
+           <p class="custom-font">I have been developing world building tools in various capacities since 2011.
+               Much of this in Unity, with a highlight in <a href="https://github.com/worldsmithdev/Worldsmith" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">WorldSmith</a> in 2018:
+              An open source world engine with a <a href="https://imgur.com/XsVQU7W" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">world</a> (Sicily ~500BC), <a href="https://imgur.com/XsVQU7W" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer"> economy</a>, and game built on top of it.
+<br>
+         My interests include ((tools for (simulation of)) worlds for) games and history: political, economy, military.
+<br>
+          I wrote my <a href="https://theses.liacs.nl/pdf/2021-2022-OostingTitus.pdf" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">master's thesis</a> on the <a href="https://github.com/tmoosting/Schemer" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">translation of political dynamics</a> into world building structures
+</p>
+
+    </div>
+</div>
+
+
+
 <div class="custom-font mb-4" id="accordion-collapse3" data-accordion="collapse">
-        <button type="button" class="text-[#2c9ac0] text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-3" aria-expanded="false" aria-controls="accordion-collapse-body-3">
-      State of Development
+        <button type="button" class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-3" aria-expanded="false" aria-controls="accordion-collapse-body-3">
+      Development
       <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
     </button>
 
     <div id="accordion-collapse-body-3" class="hidden no-background" aria-labelledby="accordion-collapse-heading-3">
-          <p class="text-sm">18 April 2024</p>
+          <p class="text-sm">Updated: 18 April 2024</p>
         <br>
              <p class="custom-font mb-2"><b>Database</b></p>
            <ul class="custom-font accordion-content accordion-list-item">
             <li>The core framework consists of 18 element Categories, each with a set of attribute groups and fields, many of which link to other elements</li>
-            <li>Content level: basics in place, in need of user feedback</li>
+            <li>Content level: basic data formulation in place, in need of user feedback</li>
             <li>Technical level: reworking the legacy SQLite systems into a central open source</li>
             <li>Aim to coalesce these two into a 1.0 release late 2024</li>
 
@@ -113,29 +132,9 @@ Overview
         </ul>
     </div>
 </div>
-<div class="custom-font mb-4" id="accordion-collapse4" data-accordion="collapse">
-        <button type="button" class="text-[#2c9ac0] text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-4" aria-expanded="false" aria-controls="accordion-collapse-body-4">
-      Background
-      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-    </button>
-    <div id="accordion-collapse-body-4" class="hidden no-background" aria-labelledby="accordion-collapse-heading-4">
-
-           <p class="custom-font mb-2">I Titus have been developing world building tools in various capacities since 2011</p>
-
-        <p class="custom-font mb-2">Much of this in Unity, with a highlight in <a href="https://github.com/worldsmithdev/Worldsmith" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">WorldSmith</a> in 2018:</p>
-               <p class="custom-font mb-2">An open source world engine with a <a href="https://imgur.com/XsVQU7W" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">world</a> (Sicily ~500BC), <a href="https://imgur.com/XsVQU7W" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer"> economy</a>, and game built on top of it</p>
-            <p class="custom-font mb-2">My interests include ((tools for (simulation of)) worlds for) games and history: political, economy, military </p>
-            <p class="custom-font mb-2">Wrote my <a href="https://theses.liacs.nl/pdf/2021-2022-OostingTitus.pdf" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">master's thesis</a> on the <a href="https://github.com/tmoosting/Schemer" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">translation of political dynamics</a> into world building structures</p>
-
-
-    </div>
-</div>
-
-
-
 
 <div class="custom-font mb-4" id="accordion-collapse5" data-accordion="collapse">
-        <button type="button" class="text-[#2c9ac0] text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-5" aria-expanded="false" aria-controls="accordion-collapse-body-5">
+        <button type="button" class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-5" aria-expanded="false" aria-controls="accordion-collapse-body-5">
       Changelog
       <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
     </button>
