--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -1,23 +1,21 @@
 {% load static %}
 
 <div class="custom-font mb-2">
-     <p class="text-sm">18 April 2024</p>
-     <p class="text-sm">OW version: 0.15.10</p>
-           <div class="flex items-center mt-0 gap-2">
-        <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
-            <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="w-4">
-        </a>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdY-47uxOUANZuhomPVOgpUB0AwSlub6MsPOWby1zcOukHhhg/viewform?usp=sf_link" class="ml-2 inline-block text-m font-bold text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">Feedback</a>
-    </div>
-    <br>
+{#     <p class="text-sm">18 April 2024</p>#}
+{#     <p class="text-sm">OW version: 0.15.10</p>#}
     <br>
     <p class="mb-2">Welcome to the first release of the <b><a href="#" id="link-to-framework" class="text-blue-500 hover:underline">OnlyWorlds Framework</a></b></p>
    <p class="mb-2"><b><a href="#" id="link-to-worlds" class="text-blue-500 hover:underline">Worlds</a></b> can be stored and retrieved on this server</p>
     <p class="mb-2">Mobile app linked below, more info in <b><a href="#" id="link-to-apps" class="text-blue-500 hover:underline">Applications</a></b></p>
 
 
+              <div>
+
+     </div>
   <br>
-  <br>
+
+
+
     <div class="flex flex-row items-center gap-4 mt-4">
         <a href="https://testflight.apple.com/join/bXvUExCL" target="_blank" rel="noopener noreferrer">
             <img src="{% static 'img/icon-apple.png' %}" alt="iOS Testflight" style="height: 32px; width: auto;">
@@ -25,11 +23,16 @@
         <a href="https://play.google.com/apps/internaltest/4700705784602434522" target="_blank" rel="noopener noreferrer">
             <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 48px; width: auto;">
         </a>
+           <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
+            <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="w-8">
+        </a>
     </div>
       <br>
       <br>
-      <br>
-  <br>
 
+     <div>
+
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdY-47uxOUANZuhomPVOgpUB0AwSlub6MsPOWby1zcOukHhhg/viewform?usp=sf_link" class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">Feedback Form</a>
+    </div>
 
 </div>
