--- a/home/templates/content_apps.html
+++ b/home/templates/content_apps.html
@@ -37,8 +37,8 @@
                  <p class="custom-font mb-2">Lets you define a world, create and configure elements in it, follow a progression system with some guides and rewards, and chat with AI agents that are specialized for world build assistance</p>
     <p class="custom-font mb-2">Currently in internal testing environments for both iOs and android</p>
     <p class="custom-font mb-8">All feedback is welcome: on stability, bugs, UI/UX, content, database, etc.</p>
-    <a href="{% static 'img/companion.jpg' %}" target="_blank" class="inline-block mb-3">
-          <img src="{% static 'img/companion.jpg' %}" alt="Companion Preview" class="max-w-xs cursor-pointer">
+    <a href="{% static 'img/companion.jpeg' %}" target="_blank" class="inline-block mb-3">
+          <img src="{% static 'img/companion.jpeg' %}" alt="Companion Preview" class="max-w-xs cursor-pointer">
       </a>
 
     </div>
