--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -15,7 +15,6 @@
   <br>
 
 
-
     <div class="flex flex-row items-center gap-4 mt-4">
         <a href="https://testflight.apple.com/join/bXvUExCL" target="_blank" rel="noopener noreferrer">
             <img src="{% static 'img/icon-apple.png' %}" alt="iOS Testflight" style="height: 32px; width: auto;">
@@ -28,6 +27,11 @@
         </a>
     </div>
       <br>
+
+    <p class="mb-2 text-sm">Android is in closed testing and requires email.
+    Please send me one or use the form on the <a href="https://www.onlyworlds.com/about/" class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">About page</a></p>
+    <p class="mb-2 text-sm">iOs is in TestFlight. Follow steps to install, then open app</p>
+
       <br>
 
      <div>
